fix(select): fix overflow scroll on IE
references #1628

--- a/src/components/select/select.scss
+++ b/src/components/select/select.scss
@@ -110,6 +110,7 @@ md-select-menu {
   transform-origin: 0 0;
   transform: scale(1.0);
   max-height: ($select-option-height * $select-max-visible-options) + 2 * $baseline-grid;
+  overflow-y: scroll;
 
   md-content {
     min-width: 136px;
